snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/maven-metadata.xml.sha1
de818b5bff995fb08b6f3138fa1c70d3fc4352c5